kube-proxy-iptables
root@k01:~# kubectl exec -it kube-proxy-2flp8 -n kube-system -- /bin/sh
# ip a
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
    inet6 ::1/128 scope host
       valid_lft forever preferred_lft forever
2: ens33: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:db:e5:c4 brd ff:ff:ff:ff:ff:ff
    inet 10.1.0.202/24 brd 10.1.0.255 scope global ens33
       valid_lft forever preferred_lft forever
    inet6 fe80::20c:29ff:fedb:e5c4/64 scope link
       valid_lft forever preferred_lft forever
3: ens34: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:db:e5:ce brd ff:ff:ff:ff:ff:ff
    inet6 fe80::20c:29ff:fedb:e5ce/64 scope link
       valid_lft forever preferred_lft forever
4: docker0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default
    link/ether 02:42:70:b8:00:29 brd ff:ff:ff:ff:ff:ff
    inet 172.17.0.1/16 scope global docker0
       valid_lft forever preferred_lft forever
5: cali299ea16070e@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 0
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
6: cali098dfced402@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 1
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
7: cali34135b56efa@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 2
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
8: flannel.1: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1450 qdisc noqueue state UNKNOWN group default
    link/ether d2:9d:44:15:79:96 brd ff:ff:ff:ff:ff:ff
    inet 10.244.1.0/32 scope global flannel.1
       valid_lft forever preferred_lft forever
    inet6 fe80::d09d:44ff:fe15:7996/64 scope link
       valid_lft forever preferred_lft forever
10: cali18c0ce71eec@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 3
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
11: cali01df63fca92@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 4
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
13: calia29ceaf3bda@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 6
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
14: calif52456869e1@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 7
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
15: calibaa86db7a59@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 5
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
# iptables-save
# Generated by iptables-save v1.6.0 on Tue Apr 10 02:43:15 2018
*mangle
:PREROUTING ACCEPT [14511:4180566]
:INPUT ACCEPT [391033:391018596]
:FORWARD ACCEPT [275:23100]
:OUTPUT ACCEPT [374308:84606057]
:POSTROUTING ACCEPT [374583:84629157]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-from-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:nE3PUa5RSRqBBvwx" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-PREROUTING -i cali+ -m comment --comment "cali:qgFofvzQe6yJPouQ" -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:o178eO5vvpj8e65z" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:5TQcm-i_T8rVGEEa" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:43:15 2018
# Generated by iptables-save v1.6.0 on Tue Apr 10 02:43:15 2018
*raw
:PREROUTING ACCEPT [440593:393825607]
:OUTPUT ACCEPT [374314:84607546]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:WX1xZBEtmbS0Rhjs" -j MARK --set-xmark 0x0/0xf000000
-A cali-OUTPUT -m comment --comment "cali:iE00ZyllJNXfrlg_" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:Asois4hxp1rUxwJS" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:zatSDPVUhhPCk6Iy" -j MARK --set-xmark 0x0/0xf000000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:-ES4EW0vxFmM81t8" -j MARK --set-xmark 0x4000000/0x4000000
-A cali-PREROUTING -m comment --comment "cali:VE1J3S_1t9q8GAsm" -m mark --mark 0x0/0x4000000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:VX8l4jKL9w89GXz5" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:73bZKoyDfOpFwC2T" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:QMFuWo6o-d9yOpNm" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Kup7QkrsdmfGX0uL" -m multiport --dports 4001 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:xYYr5PEqDf_Pqfkv" -m multiport --dports 7001 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:nbWBvu4OtudVY60Q" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:UxFu5cDK5En6dT3Y" -m multiport --dports 67 -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:43:15 2018
# Generated by iptables-save v1.6.0 on Tue Apr 10 02:43:15 2018
*nat
:PREROUTING ACCEPT [3:144]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-KMQPHRA2AGDCDMQO - [0:0]
:KUBE-SEP-OP4AXEAS4OXHBEQX - [0:0]
:KUBE-SEP-R7EMXN5TTQQVP4UW - [0:0]
:KUBE-SEP-RYL6TAAHM2SJLKYX - [0:0]
:KUBE-SEP-TI7DYTAQB2SF6CTF - [0:0]
:KUBE-SEP-ZBKTUVNXQ5CID7XH - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-GGH7UOJB47W7DRK6 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-ZFGCMCM5BEBXXXNG - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.244.0.0/16 -d 10.244.0.0/16 -j RETURN
-A POSTROUTING -s 10.244.0.0/16 ! -d 224.0.0.0/4 -j MASQUERADE
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.1.0/24 -j RETURN
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/16 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-KMQPHRA2AGDCDMQO -s 10.244.0.7/32 -m comment --comment "demos/frontend:" -j KUBE-MARK-MASQ
-A KUBE-SEP-KMQPHRA2AGDCDMQO -p tcp -m comment --comment "demos/frontend:" -m tcp -j DNAT --to-destination 10.244.0.7:80
-A KUBE-SEP-OP4AXEAS4OXHBEQX -s 10.244.0.10/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OP4AXEAS4OXHBEQX -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.10:53
-A KUBE-SEP-R7EMXN5TTQQVP4UW -s 10.244.0.10/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-R7EMXN5TTQQVP4UW -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.10:53
-A KUBE-SEP-RYL6TAAHM2SJLKYX -s 10.244.0.8/32 -m comment --comment "demos/frontend:" -j KUBE-MARK-MASQ
-A KUBE-SEP-RYL6TAAHM2SJLKYX -p tcp -m comment --comment "demos/frontend:" -m tcp -j DNAT --to-destination 10.244.0.8:80
-A KUBE-SEP-TI7DYTAQB2SF6CTF -s 10.1.0.201/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-TI7DYTAQB2SF6CTF -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-TI7DYTAQB2SF6CTF --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.201:6443
-A KUBE-SEP-ZBKTUVNXQ5CID7XH -s 10.244.0.9/32 -m comment --comment "demos/redis:" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZBKTUVNXQ5CID7XH -p tcp -m comment --comment "demos/redis:" -m tcp -j DNAT --to-destination 10.244.0.9:6379
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.103.24.247/32 -p tcp -m comment --comment "demos/frontend: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.103.24.247/32 -p tcp -m comment --comment "demos/frontend: cluster IP" -m tcp --dport 80 -j KUBE-SVC-ZFGCMCM5BEBXXXNG
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.98.189.127/32 -p tcp -m comment --comment "demos/redis: cluster IP" -m tcp --dport 6379 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.98.189.127/32 -p tcp -m comment --comment "demos/redis: cluster IP" -m tcp --dport 6379 -j KUBE-SVC-GGH7UOJB47W7DRK6
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-OP4AXEAS4OXHBEQX
-A KUBE-SVC-GGH7UOJB47W7DRK6 -m comment --comment "demos/redis:" -j KUBE-SEP-ZBKTUVNXQ5CID7XH
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-TI7DYTAQB2SF6CTF --mask 255.255.255.255 --rsource -j KUBE-SEP-TI7DYTAQB2SF6CTF
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-TI7DYTAQB2SF6CTF
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-R7EMXN5TTQQVP4UW
-A KUBE-SVC-ZFGCMCM5BEBXXXNG -m comment --comment "demos/frontend:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-KMQPHRA2AGDCDMQO
-A KUBE-SVC-ZFGCMCM5BEBXXXNG -m comment --comment "demos/frontend:" -j KUBE-SEP-RYL6TAAHM2SJLKYX
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:Wd76s91357Uv7N3v" -m set --match-set cali4-masq-ipam-pools src -m set ! --match-set cali4-all-ipam-pools dst -j MASQUERADE
COMMIT
# Completed on Tue Apr 10 02:43:15 2018
# Generated by iptables-save v1.6.0 on Tue Apr 10 02:43:15 2018
*filter
:INPUT ACCEPT [319:125162]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [288:34356]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-0 - [0:0]
:cali-fw-cali01df63fca92 - [0:0]
:cali-fw-cali098dfced402 - [0:0]
:cali-fw-cali18c0ce71eec - [0:0]
:cali-fw-cali299ea16070e - [0:0]
:cali-fw-cali34135b56efa - [0:0]
:cali-fw-calia29ceaf3bda - [0:0]
:cali-fw-calibaa86db7a59 - [0:0]
:cali-fw-calif52456869e1 - [0:0]
:cali-pri-k8s_ns.default - [0:0]
:cali-pri-k8s_ns.mc1group - [0:0]
:cali-pri-k8s_ns.mc2group - [0:0]
:cali-pro-k8s_ns.default - [0:0]
:cali-pro-k8s_ns.mc1group - [0:0]
:cali-pro-k8s_ns.mc2group - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-0 - [0:0]
:cali-tw-cali01df63fca92 - [0:0]
:cali-tw-cali098dfced402 - [0:0]
:cali-tw-cali18c0ce71eec - [0:0]
:cali-tw-cali299ea16070e - [0:0]
:cali-tw-cali34135b56efa - [0:0]
:cali-tw-calia29ceaf3bda - [0:0]
:cali-tw-calibaa86db7a59 - [0:0]
:cali-tw-calif52456869e1 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -s 10.244.0.0/16 -j ACCEPT
-A FORWARD -d 10.244.0.0/16 -j ACCEPT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -i cali+ -m comment --comment "cali:X3vB2lGcBrfkYquC" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:UtJ9FnhBnFbyQMvU" -j cali-to-wl-dispatch
-A cali-FORWARD -i cali+ -m comment --comment "cali:Tt19HcSdA5YIGSsw" -j ACCEPT
-A cali-FORWARD -o cali+ -m comment --comment "cali:9LzfFCvnpC5_MYXm" -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:7AofLLOqCM5j36rM" -j MARK --set-xmark 0x0/0xe000000
-A cali-FORWARD -m comment --comment "cali:QM1_joSl7tL76Az7" -m mark --mark 0x0/0x1000000 -j cali-from-host-endpoint
-A cali-FORWARD -m comment --comment "cali:C1QSog3bk0AykjAO" -j cali-to-host-endpoint
-A cali-FORWARD -m comment --comment "cali:DmFiPAmzcisqZcvo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:i7okJZpS8VxaJB3n" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-INPUT -i cali+ -m comment --comment "cali:JaoDb6CLdcGw8g0Y" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:c5eKVW2VdKQ_LiSM" -j MARK --set-xmark 0x0/0xf000000
-A cali-INPUT -m comment --comment "cali:hwQKYSlSCkpE_9uN" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:ttp8-serzKCP-bKZ" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:YQSSJIsRcHjFbXaI" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:KRjBsKsBcFBYKCEw" -j RETURN
-A cali-OUTPUT -m comment --comment "cali:3VKAQBcyUUW5kS_j" -j MARK --set-xmark 0x0/0xf000000
-A cali-OUTPUT -m comment --comment "cali:Z1mBCSH1XHM6qq0k" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:N0jyWt2RfBedKw3L" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:73bZKoyDfOpFwC2T" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:QMFuWo6o-d9yOpNm" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Kup7QkrsdmfGX0uL" -m multiport --dports 4001 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:xYYr5PEqDf_Pqfkv" -m multiport --dports 7001 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:nbWBvu4OtudVY60Q" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:UxFu5cDK5En6dT3Y" -m multiport --dports 67 -j ACCEPT
-A cali-from-wl-dispatch -i cali0+ -m comment --comment "cali:eBnVcASLTvMFg9XV" -g cali-from-wl-dispatch-0
-A cali-from-wl-dispatch -i cali18c0ce71eec -m comment --comment "cali:Jl749yszPpu2rfrb" -g cali-fw-cali18c0ce71eec
-A cali-from-wl-dispatch -i cali299ea16070e -m comment --comment "cali:P1_E71hAoc-3QhMg" -g cali-fw-cali299ea16070e
-A cali-from-wl-dispatch -i cali34135b56efa -m comment --comment "cali:tAZJw80qcZgMgnQF" -g cali-fw-cali34135b56efa
-A cali-from-wl-dispatch -i calia29ceaf3bda -m comment --comment "cali:j6vyFw4W9zDURXvq" -g cali-fw-calia29ceaf3bda
-A cali-from-wl-dispatch -i calibaa86db7a59 -m comment --comment "cali:shM44bRny3pTbDOL" -g cali-fw-calibaa86db7a59
-A cali-from-wl-dispatch -i calif52456869e1 -m comment --comment "cali:hR8tVgQM-UUkcGbf" -g cali-fw-calif52456869e1
-A cali-from-wl-dispatch -m comment --comment "cali:LMa-pC3RikoZbNTv" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-0 -i cali01df63fca92 -m comment --comment "cali:D9eWdNfNOWsN83aq" -g cali-fw-cali01df63fca92
-A cali-from-wl-dispatch-0 -i cali098dfced402 -m comment --comment "cali:fPXsTaYRch1orJZd" -g cali-fw-cali098dfced402
-A cali-from-wl-dispatch-0 -m comment --comment "cali:uKaOYYqghxHiZoWL" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali01df63fca92 -m comment --comment "cali:LUj0zGrBEVnZOEID" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali01df63fca92 -m comment --comment "cali:B2-h0BUTaBN_b5ev" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali01df63fca92 -m comment --comment "cali:-PKYMPEjaJTbHX6m" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali01df63fca92 -m comment --comment "cali:PflVeWxDG9huIPo3" -j cali-pro-k8s_ns.mc2group
-A cali-fw-cali01df63fca92 -m comment --comment "cali:07C5IAVah80Gsuho" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali01df63fca92 -m comment --comment "cali:G5LTHC3OKFfTnKTS" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali098dfced402 -m comment --comment "cali:Vf7-o6j5E6PTerAK" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali098dfced402 -m comment --comment "cali:066Z7RKHviqCtVFp" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali098dfced402 -m comment --comment "cali:myyzS7N30_5RFoQu" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali098dfced402 -m comment --comment "cali:0GD8RYKL19k6MS-P" -j cali-pro-k8s_ns.default
-A cali-fw-cali098dfced402 -m comment --comment "cali:Mt3FJKgaYxAWdFeK" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali098dfced402 -m comment --comment "cali:KQ8yaywV2ZhgJNCv" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:Tfjy2cr5KreD0H4P" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:R-j3dzeddk7FqLG1" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:pQSepOB5_Wat-ptc" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:Rzy9N69ZlPyJeKQR" -j cali-pro-k8s_ns.mc1group
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:7WgC6CHnBfeMIjPW" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali18c0ce71eec -m comment --comment "cali:L_qJ5Gy9Thu7Zd0a" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali299ea16070e -m comment --comment "cali:f6Sa6M5ykzK_MwF3" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali299ea16070e -m comment --comment "cali:AFPMFptqa1MhS5Re" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali299ea16070e -m comment --comment "cali:JXIxY9NHgtEq_8mC" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali299ea16070e -m comment --comment "cali:77hTG8ZIOoP3arBl" -j cali-pro-k8s_ns.default
-A cali-fw-cali299ea16070e -m comment --comment "cali:sWFHu7W4dyk6YN7V" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali299ea16070e -m comment --comment "cali:Rnd9YxSFRnfk3WYL" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali34135b56efa -m comment --comment "cali:DM7DDu3etnhKZ1OO" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali34135b56efa -m comment --comment "cali:PILDKeZibM2DG8NN" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali34135b56efa -m comment --comment "cali:EvsRHBBH8y9UXvx3" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali34135b56efa -m comment --comment "cali:Vtxl5MQC7X0TEvta" -j cali-pro-k8s_ns.default
-A cali-fw-cali34135b56efa -m comment --comment "cali:_29hCfp1eSK8dxzd" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali34135b56efa -m comment --comment "cali:p5icyNGwKRBsTHpt" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:V8d2ow6SCbYkDOpH" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:PEAnMWfspE3OEsc4" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:FoE_m3pXtRKIJJ2J" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:wSoC_XYj0uqnpgLn" -j cali-pro-k8s_ns.mc1group
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:L5KSjgwtdC7zEIrE" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calia29ceaf3bda -m comment --comment "cali:sppTfiR8oDqth7bd" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:LiiD3f1nX_3k_6iI" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:nN4-kBm2AQG6BGE8" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:ahYwX4fayfEJemYW" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:1L6NnuvpNAKj18hA" -j cali-pro-k8s_ns.mc1group
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:tnvKM4ma6Nh9Iy4r" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calibaa86db7a59 -m comment --comment "cali:_gYO5Sm1Ljd_fank" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calif52456869e1 -m comment --comment "cali:b4qGG8CQvkOp5LsG" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calif52456869e1 -m comment --comment "cali:eaZJFZODXUxt0dmT" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calif52456869e1 -m comment --comment "cali:JhWA-1AQaPJDyTuo" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calif52456869e1 -m comment --comment "cali:rWby5sc79dO6PDcg" -j cali-pro-k8s_ns.mc2group
-A cali-fw-calif52456869e1 -m comment --comment "cali:pKAVB7gej_JX41Lp" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calif52456869e1 -m comment --comment "cali:23_XPGu45NCMbL9R" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pri-k8s_ns.default -m comment --comment "cali:6MWuUqsVPzpSgE3L" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.default -m comment --comment "cali:UGCdoOXoPRcONGv8" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pri-k8s_ns.mc1group -m comment --comment "cali:YLiqg6kR2M2oZhAF" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.mc1group -m comment --comment "cali:vrArDzoYKZd-k2hp" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pri-k8s_ns.mc2group -m comment --comment "cali:VzV7OaJ8tyRNpWft" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.mc2group -m comment --comment "cali:XNWgBRac7xTAatpQ" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.default -m comment --comment "cali:DTsGE7pFaKbRuEBg" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.default -m comment --comment "cali:4bIByWXruQ1DMcbo" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.mc1group -m comment --comment "cali:mPoAeiCiO68U-Pyq" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.mc1group -m comment --comment "cali:ZaZuDriJ7iIeISj8" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.mc2group -m comment --comment "cali:nwlzJxxiAx50dm_C" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.mc2group -m comment --comment "cali:0axcYB5T9_yVUXMd" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-to-wl-dispatch -o cali0+ -m comment --comment "cali:dIkHjFD9PelLx7cm" -g cali-to-wl-dispatch-0
-A cali-to-wl-dispatch -o cali18c0ce71eec -m comment --comment "cali:ptm21pf-49lTQfRj" -g cali-tw-cali18c0ce71eec
-A cali-to-wl-dispatch -o cali299ea16070e -m comment --comment "cali:UuZGCLwIDcVm5tQt" -g cali-tw-cali299ea16070e
-A cali-to-wl-dispatch -o cali34135b56efa -m comment --comment "cali:kJBZjQHfHiGxjgKc" -g cali-tw-cali34135b56efa
-A cali-to-wl-dispatch -o calia29ceaf3bda -m comment --comment "cali:5J9n9Ld-QZQOW3oQ" -g cali-tw-calia29ceaf3bda
-A cali-to-wl-dispatch -o calibaa86db7a59 -m comment --comment "cali:tvbL_8gjGTpBXrki" -g cali-tw-calibaa86db7a59
-A cali-to-wl-dispatch -o calif52456869e1 -m comment --comment "cali:W26wuWrueagY2Rek" -g cali-tw-calif52456869e1
-A cali-to-wl-dispatch -m comment --comment "cali:WgcarpYXOoi3fs_j" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-0 -o cali01df63fca92 -m comment --comment "cali:RF4wPx9gdau7Tqxr" -g cali-tw-cali01df63fca92
-A cali-to-wl-dispatch-0 -o cali098dfced402 -m comment --comment "cali:wOlvXmigTAe_rt91" -g cali-tw-cali098dfced402
-A cali-to-wl-dispatch-0 -m comment --comment "cali:d9XwXK7BK961ACEd" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali01df63fca92 -m comment --comment "cali:0x6yk6SbgZGR9vBC" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali01df63fca92 -m comment --comment "cali:73ILMlM0VuMjh1XA" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali01df63fca92 -m comment --comment "cali:_P8YA5x13LcXL0-Y" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali01df63fca92 -m comment --comment "cali:gOzpOwH5BPewsDx_" -j cali-pri-k8s_ns.mc2group
-A cali-tw-cali01df63fca92 -m comment --comment "cali:b2YfIqP4lXTnwAZ6" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali01df63fca92 -m comment --comment "cali:uWcY0slizLbFRJeu" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali098dfced402 -m comment --comment "cali:8Kz26kBtqJ--ym9T" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali098dfced402 -m comment --comment "cali:XBaoC-pj5RIkCYBC" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali098dfced402 -m comment --comment "cali:vij7UocmZ-Sj8LUl" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali098dfced402 -m comment --comment "cali:osjqGktxkkjeC81_" -j cali-pri-k8s_ns.default
-A cali-tw-cali098dfced402 -m comment --comment "cali:i6PG2JWFi_egvNti" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali098dfced402 -m comment --comment "cali:FwlmEzm21AvEwSg5" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:v19l_PuYa0JJA6Aa" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:pnkfP_Mf2GUfe-Cl" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:lhmnPdY-a7DC6rix" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:skYvctZNh4263czE" -j cali-pri-k8s_ns.mc1group
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:kzLPHOJkI0eNFuXF" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali18c0ce71eec -m comment --comment "cali:RoCWT8ZcWDw-_pM5" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali299ea16070e -m comment --comment "cali:z3a2KmM_gT7oYhpR" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali299ea16070e -m comment --comment "cali:M6xHJIaRoU2tw728" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali299ea16070e -m comment --comment "cali:7bKFJYNSbO54_rID" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali299ea16070e -m comment --comment "cali:UuFfsfSUdM2exfXI" -j cali-pri-k8s_ns.default
-A cali-tw-cali299ea16070e -m comment --comment "cali:ss2P15GppC1YRqxd" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali299ea16070e -m comment --comment "cali:gogmrKy9vygqsjol" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali34135b56efa -m comment --comment "cali:6--RW6ccyFXh6ogo" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali34135b56efa -m comment --comment "cali:ge74E0XoImomexAz" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali34135b56efa -m comment --comment "cali:gxRU9ckXjgJXA_wM" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali34135b56efa -m comment --comment "cali:kE27I0Q-ugt3cJAM" -j cali-pri-k8s_ns.default
-A cali-tw-cali34135b56efa -m comment --comment "cali:CzJRiuafrliYW5v5" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali34135b56efa -m comment --comment "cali:LirwKcWPjsqBr5Gj" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:pkh9BcdbFkhiZ8H5" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:z5kwSIvKNWuXVhat" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:AVMV8RMsZzTcG2pg" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:V17DX67oH00Nfk2t" -j cali-pri-k8s_ns.mc1group
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:ZP4MmAR4Krip6qiX" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calia29ceaf3bda -m comment --comment "cali:5hakYpfCsVLhh_hj" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:vH5xeY0z8E60t6aK" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:Us_zEqIU4k7b_T5d" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:vLO1gf9QeXKOCClP" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:irYMn-wBKo5TidjW" -j cali-pri-k8s_ns.mc1group
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:MCwJD_7HxEI0VXg_" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calibaa86db7a59 -m comment --comment "cali:by-R5ZjaO3G-U5eX" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calif52456869e1 -m comment --comment "cali:VRnCtMaX-cdq0BCn" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calif52456869e1 -m comment --comment "cali:5_kuPxcz0WCmQhr9" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calif52456869e1 -m comment --comment "cali:2FY-NIKvoUuYEUwC" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calif52456869e1 -m comment --comment "cali:RFO_vMEsisVRa1vZ" -j cali-pri-k8s_ns.mc2group
-A cali-tw-calif52456869e1 -m comment --comment "cali:AYJPX3IcIXVkK83Y" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calif52456869e1 -m comment --comment "cali:wRIoChBNEJ2IW8Zc" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:43:15 2018
#
